_sass/_reset.scss
*, *::before, *::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  -webkit-text-size-adjust: 100%;
  scroll-behavior: smooth;
}

body {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  -webkit-font-smoothing: antialiased;
}

img {
  max-width: 100%;
  height: auto;
  display: block;
}

a {
  color: $accent;
  text-decoration: none;
  transition: color 0.15s;

  &:hover {
    color: #fff;
    text-decoration: none;
  }
}

ul, ol {
  list-style-position: inside;
}

table {
  border-collapse: collapse;
  width: 100%;
}

